--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+
+        <h1 id="title">Lets Talk</h1>
+        <p id="description">Let your voice be heard</p>
         
         <script src="" async defer></script>
     </body>
