Added a form with name, email and phone number

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+        <div class="header">
         <h1 id="title">Lets Talk</h1>
         <p id="description">Let your voice be heard</p>
-        
-        <script src="" async defer></script>
+        </div>
+
+        <div class="form">
+            <form action="">
+                <label>Username: <input type="text" placeholder="Name" id="name"></label>
+                <label>Email: <input type="email" placeholder="email" id="email"></label>
+                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label>
+            </form>
+        </div>
+    
     </body>
 </html>
