Added a dropdown option in the form

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                 <label>Username: <input type="text" placeholder="Name" id="name"></label>
                 <label>Email: <input type="email" placeholder="email" id="email"></label>
                 <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label>
+                
+                <label> Career:
+                <select name="career" id="drop-down">
+                    <option value="flat"></option>
+                    <option value="Front-end">Front-end Developer</option>
+                    <option value="back-end">Back-End Developer</option>
+                    <option value="full-stack">Full Stack Developer</option>
+                </select>
+                </label>
             </form>
         </div>
     
