Added a fieldset of radio buttons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                     <option value="full-stack">Full Stack Developer</option>
                 </select>
                 </label>
+
+                <fieldset class="radio">
+                    <legend>Would you recommend our services?</legend>
+                    <input type="radio" name="service" value="yes" id="yes" >
+                    <label for="yes">YES</label>
+                    <input type="radio" name="service" value="no" id="no" >
+                    <label for="no">NO</label>
+                    <input type="radio" name="service" value="maybe" id="maybe" >
+                    <label for="maybe">MAYBE</label>               
+                 </fieldset>
+
+
             </form>
         </div>
     
