--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
                     <label for="maybe">MAYBE</label>               
                  </fieldset>
 
+                 <fieldset>
+                     <legend>What would you like to learn?</legend>
+                     <input type="checkbox" id="css" name="course" value="css">
+                     <label for="css">CSS:</label>
+                     <input type="checkbox" id="html" name="course" value="html">
+                     <label for="css">HTML:</label>
+                     <input type="checkbox" id="javascript" name="course" value="javascript">
+                     <label for="css">Javascript:</label>
+                     <input type="checkbox" id="bootstrap" name="course" value="bootstrap">
+                     <label for="css">Bootstrap:</label>
+                 </fieldset>
+
+                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea>
 
             </form>
         </div>
