Added a submit button

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
                  <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea>
 
+                 <button type="submit" value="submit" id="button">Submit</button>
+
             </form>
         </div>
     
