--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="main">
         <div class="header">
         <h1 id="title">Lets Talk</h1>
         <p id="description">Let your voice be heard</p>
@@ -58,6 +59,6 @@
 
             </form>
         </div>
-    
+    </div>
     </body>
 </html>
