Created a box shadow for the form div

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
 
         <div class="form">
-            <form action="">
-                <label>Username: <input type="text" placeholder="Name" id="name"></label>
-                <label>Email: <input type="email" placeholder="email" id="email"></label>
-                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label>
+            <form >
+                <label>Username: <input type="text" placeholder="Name" id="name"></label><br>
+                <label>Email: <input type="email" placeholder="email" id="email"></label><br>
+                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label><br>
                 
                 <label> Career:
                 <select name="career" id="drop-down">
@@ -29,7 +29,7 @@
                     <option value="back-end">Back-End Developer</option>
                     <option value="full-stack">Full Stack Developer</option>
                 </select>
-                </label>
+                </label><br>
 
                 <fieldset class="radio">
                     <legend>Would you recommend our services?</legend>
@@ -39,7 +39,7 @@
                     <label for="no">NO</label>
                     <input type="radio" name="service" value="maybe" id="maybe" >
                     <label for="maybe">MAYBE</label>               
-                 </fieldset>
+                 </fieldset><br>
 
                  <fieldset>
                      <legend>What would you like to learn?</legend>
@@ -51,11 +51,11 @@
                      <label for="css">Javascript:</label>
                      <input type="checkbox" id="bootstrap" name="course" value="bootstrap">
                      <label for="css">Bootstrap:</label>
-                 </fieldset>
+                 </fieldset><br>
 
-                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea>
+                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea><br>
 
-                 <button type="submit" value="submit" id="button">Submit</button>
+                 <button type="submit" value="submit" id="button">Submit</button><br>
 
             </form>
         </div>
