styles the main clas and the header class.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="main">
+     <div class="main">
         <div class="header">
-        <h1 id="title">Lets Talk</h1>
-        <p id="description">Let your voice be heard</p>
+        <h1 id="title">CONTACT US</h1>
+        <p id="description">We value every customer feedback</p>
         </div>
 
         <div class="form">
