commented out unnecessary contact information things

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <label>Email: <input type="email" placeholder="email" id="email"></label><br>
                 <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label><br>
                 
-                <label> Career:
+                <!--<label> Career:
                 <select name="career" id="drop-down">
                     <option value="flat"></option>
                     <option value="Front-end">Front-end Developer</option>
@@ -40,19 +40,9 @@
                     <label for="no">NO</label>
                     <input type="radio" name="service" value="maybe" id="maybe" >
                     <label for="maybe">MAYBE</label>               
-                 </fieldset><br>
+                 </fieldset><br>-->
 
-                 <fieldset>
-                     <legend>What would you like to learn?</legend>
-                     <input type="checkbox" id="css" name="course" value="css">
-                     <label for="css">CSS:</label>
-                     <input type="checkbox" id="html" name="course" value="html">
-                     <label for="css">HTML:</label>
-                     <input type="checkbox" id="javascript" name="course" value="javascript">
-                     <label for="css">Javascript:</label>
-                     <input type="checkbox" id="bootstrap" name="course" value="bootstrap">
-                     <label for="css">Bootstrap:</label>
-                 </fieldset><br>
+               <!---->
 
                  <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea><br>
 
