--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
      <div class="main">
+        <div class="contact-box">
         <div class="header">
         <h1 id="title">CONTACT US</h1>
         <p id="description">We value every customer feedback</p>
@@ -28,6 +29,7 @@
                  <button type="submit" value="submit" id="button">Submit</button><br>
 
             </form>
+        </div>
         </div>
     </div>
     </body>
