--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
 
         <div class="form">
-            <form >
-                <label>Username: <input type="text" placeholder="Name" id="name"></label><br>
-                <label>Email: <input type="email" placeholder="email" id="email"></label><br>
-                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16"></label><br>
+            <form id="form-field">
+                <label>Username: <input type="text" placeholder="Name" id="name" class="form-field"></label><br>
+                <label>Email: <input type="email" placeholder="email" id="email" class="form-field"></label><br>
+                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16" class="form-field"></label><br>
 
-                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment"></textarea><br>
+                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment" class="form-field"></textarea><br>
 
                  <button type="submit" value="submit" id="button">Submit</button><br>
 
