--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                  <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment" class="form-field"></textarea><br>
 
-                 <button type="submit" value="submit" id="button">Submit</button><br>
+                 <button type="submit" value="submit" id="button" class="btn">Send</button><br>
 
             </form>
         </div>
