Brushed over some few css styles

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <div class="form">
             <form id="form-field">
-                <label>Username: <input type="text" placeholder="Name" id="name" class="form-field"></label><br>
-                <label>Email: <input type="email" placeholder="email" id="email" class="form-field"></label><br>
-                <label>Number: <input type="tel" placeholder="number" id="number" min="10" max="16" class="form-field"></label><br>
+                <input type="text" placeholder="Name" id="name" class="form-field"><br>
+                 <input type="email" placeholder="email" id="email" class="form-field"><br>
+                 <input type="tel" placeholder="number" id="number" min="10" max="16" class="form-field"><br>
 
-                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="leave a comment" class="form-field"></textarea><br>
+                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Messege" class="form-field comment"></textarea><br>
 
                  <button type="submit" value="submit" id="button" class="btn">Send</button><br>
 
