Brushed over some few css styles

--- a/index.html
+++ b/index.html
@@ -7,11 +7,30 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
-        
-        <script src="" async defer></script>
+     <div class="main">
+        <div class="contact-box">
+        <div class="header">
+        <h1 id="title">CONTACT US</h1>
+        <p id="description">We value every customer feedback</p>
+        </div>
+
+        <div class="form">
+            <form id="form-field">
+                <input type="text" placeholder="Name" id="name" class="form-field"><br>
+                 <input type="email" placeholder="email" id="email" class="form-field"><br>
+                 <input type="tel" placeholder="number" id="number" min="10" max="16" class="form-field"><br>
+
+                 <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Messege" class="form-field comment"></textarea><br>
+
+                 <button type="submit" value="submit" id="button" class="btn">Send</button><br>
+
+            </form>
+        </div>
+        </div>
+    </div>
     </body>
 </html>
